
* `Input encoding`_:

  - Raise UnicodeError (instead of falling back to the locale encoding)
    if decoding the source with the default encoding (UTF-8) fails and
    Python is started in `UTF-8 mode`_.

    Raise UnicodeError (instead of falling back to "latin1") if both,
    default and locale encoding, fail.

  - Only remove BOM (U+FEFF ZWNBSP at start of data), no other ZWNBSPs.

* `html5` writer:

  - Stop setting the "footnote-reference" class value for footnote
    references. Since 0.18, you can use the CSS selector
    ``[role="doc-noteref"]`` instead of ``.footnote-reference``
    (see minimal.css for examples).

  - Use dpub-ARIA role "doc-footnote" (instead of ARIA role "note")
    for footnotes in Docutils 0.20.

  - Move attribution behind the blockquote to comply with the `"living
    standard"`__. (HTML5__ allows <cite> elements inside a blockquote.)

    __ https://html.spec.whatwg.org/#the-blockquote-element
    __ https://www.w3.org/TR/2014/REC-html5-20141028/grouping-content.html
       #the-blockquote-element

  - Remove option ``--embed-images`` (obsoleted by "image_loading_")
    in Docutils 2.0.

* `latex2e` writer:

  - Change default of use_latex_citations_ setting to True
    in Docutils 1.0.

  - Change default of legacy_column_widths_ setting to False
    in Docutils 1.0.

  - Remove ``use_verbatim_when_possible`` setting
    (use literal_block_env_: verbatim) in Docutils 2.0.

  - Do not insert ``\usepackage[utf8]{inputenc}`` into UTF-8 encoded
    LaTeX sources. UTF-8 is the default encoding for LaTeX2e since 2018.

* `xetex` writer:

  - Settings in the [latex2e writer] `configuration file section`__
    will be ignored by the `xetex` writer in Docutils 0.20.
    Move settings intended for both, `xetex` and `latex2e` writers
    to section [latex writers].

    __ docs/user/config.html#configuration-file-sections-entries

* Remove the "rawsource" argument from nodes.Text.__init__()